MDEV-298: SHOW EXPLAIN: Plan returned by SHOW EXPLAIN only contains 'Using temporary' ... - Correct the way SHOW EXPLAIN code calculates 'need_order' parameter   for JOIN::print_explain().   The calculation is still an approximation (see MDEV entry for details) (even EXPLAIN itself   is wrong in certain cases), but now it's a better approximation than before.